--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pymymodeler"
-version = "0.1.0"
+version = "0.1.2"
 description = "A library to generate SQLAlchemy and Pydantic models from MySQL databases"
 readme = "README.md"
 license = {text = "MIT"}
 authors = [
-    {name = "masoppubun", email = ""}
+    {name = "masoppubun", email = "spice.alone@gmail.com"}
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -19,13 +19,15 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 
-[project.dependencies]
-sqlalchemy = "^2.0"
-pydantic = "^2.0"
-pymysql = "^1.0"
-sqlacodegen_v2 = "^1.0"
+dependencies = [
+    "sqlalchemy>=2.0",
+    "pydantic>=2.0",
+    "pymysql>=1.0",
+    "sqlacodegen_v2>=0.1"
+]
 
 [project.urls]
 Homepage = "https://github.com/masoppubun/pymymodeler"
